--- a/billing/hola-deployment.yml
+++ b/billing/hola-deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: hola-deployment
-          image: dimensionjava/msvc-hola:latest
+          image: dimensionjava/billingapp-backend:latest
           ports:
             - containerPort: 8081
 ---
