--- a/hello-arg-app/pom.xml
+++ b/hello-arg-app/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.dimension</groupId>
-	<artifactId>billing</artifactId>
+	<artifactId>hello-arg-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>billing</name>
 	<description>Demo project for Spring Boot</description>
