--- a/hello-arg-app/Dockerfile
+++ b/hello-arg-app/Dockerfile
@@ -3,7 +3,7 @@ FROM eclipse-temurin:17-jdk
 #JAR_FILE=/target/*.jar
 ARG JAR_FILE
 
-ADD ${JAR_FILE} app.jar
+ADD ${JAR_FILE} apparg.jar
 
 #SE ESPECIFICA EL PUERTO PARA SABER QUE PUERTO SE CONFIGURO EN LA APLICACION
 #NO SOBREESCRIBE EL PUERTO QUE SE CONFIGURO EN LA APLICACION
